--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
+    <style>
+        *{
+            background-color: lightgrey;
+        }
+    </style>
 
 </head>
 
 <body>
     <center><img src="BSCS51F22S014.jpg" style="height: 500px; margin-bottom: 20px; margin-top: 20px; border-width: 2px; border-style: solid; border-color: #393535;" alt="Image displaying my roll number BSCS51F22S014"></center>
     
-    <h1 style="font-family: 'Roboto', sans-serif; font-size: 42px; font-weight: bold; color: #333333;">The Future of Artificial Intelligence: <br> Where Are We Headed?</h1>
+    <h1 style="font-family: 'Roboto', sans-serif; font-size: 42px; font-weight: bold; color: #000000;">The Future of Artificial Intelligence: <br> Where Are We Headed?</h1>
     
     <h2 style="font-family: 'Roboto', sans-serif; font-size: 36px; font-weight: bold; color: #333333;">Introduction</h2>
     <p style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">Artificial Intelligence (AI) has been rapidly evolving, transforming industries from healthcare to transportation. With the integration of AI into our daily lives, we are seeing incredible advancements that are not just reshaping technology but also redefining the way we interact with the world. In this blog post, we will explore the current state of AI, its future possibilities, and its impact on society.</p>
@@ -39,4 +44,3 @@
 </body>
 
 </html>
-
